<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_registrer_text"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/edt_fullname_hint"
                android:inputType="text"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/edt_email_hint"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/edt_repassword_hint"
                android:inputType="textPassword"
                tools:targetApi="o" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_round"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/btn_register_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_display_other_register_method" />

        <Button
            android:id="@+id/btnFacebook"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_facebook_round"
            android:text="@string/btn_facebook_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoogle"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_google_round"
            android:text="@string/btn_google_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
